--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,21 +1,39 @@
-<div class="contact">
-    <h1>Contact me.</h1>
+<div id="contact" class="contact">
+    <h1>Contact me</h1>
     <p>Get in touch via the from bellow, or by emailling <a href="tijana.couturier@web.de">tijana.couturier@web.de</a>.</p>
 
     <form (submit)="sendMail()" ngNativeValidate #myForm class="form">
 
         <input required type="text" name="name" #nameField placeholder="Enter your name *">
 
-        <input required type="text" name="email" #emailField placeholder="Enter your Email address *">
+        <input required type="text" email="email" #emailField placeholder="Enter your Email address *">
 
-        <input required type="text" name="message" #messageField class="message" placeholder="Enter your message *">
+        <input required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
 
-        <button #sendButton class="send-btn">Send</button>
+        <button #sendButton mat-stroked-button color="primary">Send</button>
     </form>
+
 
 </div>
 
 <!--
+
+ <input [(ngModel)]="inputName" required type="text" name="name" #nameField placeholder="Enter your name *">
+
+        <input [(ngModel)]="inputEmail" required type="text" email="email" #emailField placeholder="Enter your Email address *">
+
+        <input [(ngModel)]="inputMessage" required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
+
+        <button [disabled]="inputName.length == 0" [style.background-color]="send ? 'black' : '#2DFCD8'" [style.color]="send ? '#2dfcd964' : 'black'" #sendButton mat-stroked-button color="primary">Send</button>
+
+
+
+
+ [style.background-color]="send ? 'black' : '#2DFCD8'" [style.color]="send ? '#2dfcd964' : 'black'" 
+
+
+
+        <button #sendButton class="send-btn">Send</button>
      <form (submit)="sendMail()" ngNativeValidate #myForm class="form">
         <h5>Name</h5>
         <input required type="text" name="name" #nameField placeholder="Enter your name">
