--- a/src/app/data-protection/data-protection.component.scss
+++ b/src/app/data-protection/data-protection.component.scss
@@ -1,5 +1,7 @@
 .text-data-guidelines {
-    margin: 30px;
+    padding-left: 180px;
+    padding-right: 180px;
+    padding-bottom: 50px;
     color: white;
 }
 
@@ -26,5 +28,5 @@
 }
 
 .info {
-    padding-top: 30px;
+    padding-top: 150px;
 }
