--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -8,8 +8,13 @@
         Telefon: +49 163 9247528 <br>
         <br> E-Mail: tijana.couturier@web.de
         <br>
-        <br>Icon by Icon8
+        <br>Icon and Bootstrap by Icon8
+        <br>Logo by Logo Maker
+        <br>Data protection by activeMind AG
+        <br>Imprint by
 
     </div>
 
 </div>
+
+<!--ngIf="router.url == '/imprint'"-->
