--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,43 +4,20 @@
             <img src="assets/img/profil-img.jfif">
         </div>
         <div class="about-me-text">
-            <h1>About me.</h1>
-            <p>"I'm fascinated by digitization and a front end developer who wants to make the world more beautiful."</p>
+            <h1 data-aos="fade-right" data-aos-easing="ease-out-cubis">About me.</h1>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">"I'm fascinated by digitization and a front end developer who wants to make the world more beautiful."</p>
         </div>
     </div>
 
-    <div class="journey">
-        <div>
+    <div class="aboutPost">
+        <div data-aos="fade-right" data-aos-easing="ease-out-cubis" *ngFor="let about of aboutMe; let i = index" class="journey">
             <div class="img-circle">
-                <img src="assets/img/Portfolio-img/walk-line.png">
+                <img src="{{ about.img }}">
             </div>
 
-            <p>MY JOURNEY BEGAN</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, aperiam accusantium! Odit animi corrupti eaque quos! Quam reprehenderit doloremque obcaecati laborum provident illo quibusdam animi! Enim adipisci quas deserunt. Perspiciatis.</p>
-        </div>
-        <div>
-            <div class="img-circle">
-                <img src="assets/img/Portfolio-img/heart-line.png">
-            </div>
+            <p>{{ about["title"] }}</p>
+            <p>{{ about["post"] }}</p>
 
-            <p>MY JOURNEY BEGAN</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, aperiam accusantium! Odit animi corrupti eaque quos! Quam reprehenderit doloremque obcaecati laborum provident illo quibusdam animi! Enim adipisci quas deserunt. Perspiciatis.</p>
-        </div>
-        <div class="padding">
-            <div class="img-circle">
-                <img src="assets/img/Portfolio-img/search-line.png">
-            </div>
-
-            <p>MY JOURNEY BEGAN</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, aperiam accusantium! Odit animi corrupti eaque quos! Quam reprehenderit doloremque obcaecati laborum provident illo quibusdam animi! Enim adipisci quas deserunt. Perspiciatis.</p>
-        </div>
-        <div>
-            <div class="img-circle">
-                <img src="assets/img/Portfolio-img/flight-takeoff-line.png">
-            </div>
-
-            <p>MY JOURNEY BEGAN</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, aperiam accusantium! Odit animi corrupti eaque quos! Quam reprehenderit doloremque obcaecati laborum provident illo quibusdam animi! Enim adipisci quas deserunt. Perspiciatis.</p>
         </div>
     </div>
 </div>
