--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,10 +1,7 @@
 .about-me {
     width: 100vw;
     max-width: 100%;
-    background-color: rgb(19, 17, 17);
-    // position: absolute;
-    // top: 3800px;
-    //height: 1000px;
+    background-color: #1A1A1A;
     .about-me-text {
         color: white;
         font-size: 24px;
@@ -15,24 +12,28 @@
         justify-content: space-evenly;
         border-bottom: 2px solid rgb(26, 76, 67);
         margin-top: 80px;
-        margin-bottom: 100px;
+        margin-bottom: 80px;
+        padding-top: 50px;
         img {
             height: 300px;
             width: 300px;
             object-fit: cover;
             border-radius: 100%;
-            margin-bottom: 100px;
+            margin-bottom: 50px;
         }
         p {
             color: white;
         }
     }
-    .journey {
+    .aboutPost {
         display: flex;
         justify-content: space-around;
         align-items: center;
         padding-left: 180px;
         padding-right: 180px;
+        padding-bottom: 50px;
+    }
+    .journey {
         color: white;
         img {
             position: relative;
@@ -44,15 +45,16 @@
         }
         p {
             padding-right: 30px;
-            max-width: 250px;
+            min-width: 150px;
+            max-width: 150px;
         }
         .img-circle {
-            background-color: rgb(45, 252, 216);
+            background-color: #2DFCD8;
             width: 60px;
             height: 60px;
             border-radius: 100%;
-            position: relative;
-            left: 50px;
+            // position: relative;
+            // left: 50px;
         }
     }
 }
