--- a/src/app/header-text/header-text.component.scss
+++ b/src/app/header-text/header-text.component.scss
@@ -1,54 +1,50 @@
 .header-text-img {
     display: flex;
     justify-content: space-between;
-    padding-top: 150px;
-    padding-left: 180px;
-    padding-right: 180px;
-    left: 180px;
-    right: 180px;
+    padding: 180px;
     img {
-        width: 400px;
-        height: 400px;
+        width: 350px;
+        height: 350px;
         object-fit: cover;
-        border-radius: 100%
+        margin-top: 30px;
+        border-radius: 100%;
     }
     p {
         color: white;
-        font-size: 80px;
+        font-size: 64px;
         font-weight: 800;
     }
     button {
-        height: 150px;
-        width: 500px;
+        height: 60px;
+        width: 250px;
         background-color: black;
-        border: solid 5px rgb(45, 252, 216);
+        border: solid 2px #2DFCD8;
         &:hover {
-            background-color: rgb(45, 252, 216);
+            background-color: #2DFCD8;
             color: black;
         }
     }
     .primary {
-        font-size: 32px;
-        color: rgb(45, 252, 216);
+        font-size: 24px;
+        color: #2DFCD8;
         cursor: pointer;
     }
     .name {
-        color: rgb(250, 39, 89);
+        color: #FA2759;
         transform: scale(2, 3);
         animation-direction: normal
     }
     .e {
-        color: rgb(45, 252, 216);
+        color: #2DFCD8;
     }
 }
 
 .arrow {
-    height: 110px;
-    //position: relative;
-    //  top: 1000px;
+    height: 90px;
     display: flex;
     justify-content: center;
     img {
-        height: 110px;
+        height: 70px;
+        animation: pulse 2s infinite;
     }
 }
