--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -3,15 +3,16 @@
     width: 100vw;
     max-width: 100%;
     max-height: 700px;
-    background-color: rgb(19, 17, 17);
+    background-color: #1A1A1A;
+    padding-top: 120px;
     h1 {
         font-size: 64px;
         padding-left: 180px;
-        padding-top: 50px;
     }
     .date {
         font-size: 20px;
         padding-left: 180px;
-        padding-top: 100px;
+        padding-top: 40px;
+        padding-bottom: 50px;
     }
 }
