--- a/src/app/menu-links/menu-links.component.scss
+++ b/src/app/menu-links/menu-links.component.scss
@@ -1,29 +1,94 @@
 header {
-    position: absolute;
     left: 0;
     right: 0;
     height: 80px;
+    position: absolute;
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-left: 180px;
     padding-right: 180px;
+    min-height: 100px;
     img {
         height: 70px;
-        margin-top: 100px;
+        margin-top: 15px;
+        cursor: pointer;
     }
     a {
         cursor: pointer;
         text-decoration: none;
         color: white;
         margin-left: 40px;
-        font-size: 24px;
+        font-size: 20px;
         &:hover {
             //  color: rgba(250, 250, 250, 0.8);
-            color: rgb(250, 39, 89);
+            color: #FA2759;
         }
     }
     .links {
         transition: all 125ms ease-in-out;
     }
+}
+
+.menu {
+    filter: invert(1);
+    position: absolute;
+    width: 40px;
+    right: 16px;
+    top: 16px;
+    cursor: pointer;
+    img {
+        height: 40px;
+    }
+}
+
+.overlay-menu {
+    // background-color: linear-gradient(180deg, black, 20%, var(--grey), 80%, #4b4b4b);
+    background-color: #4b4b4b;
+    position: absolute;
+    // position: fixed;
+    right: 0;
+    top: 0;
+    // z-index: 2;
+    z-index: 30;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 100vh;
+    border-left: 1px solid black;
+    transform: translate(251px);
+    transition: all 225ms ease-in-out;
+}
+
+.d-none {
+    display: none;
+}
+
+.show-overlay-menu {
+    transform: translate(0);
+    img {
+        height: 40px;
+        filter: invert(1);
+    }
+}
+
+.close {
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    height: 40px;
+}
+
+.links-mobil {
+    display: flex;
+    flex-direction: column;
+    padding-top: 150px;
+    a {
+        padding: 25px;
+    }
+}
+
+.home {
+    color: #FA2759;
 }
