--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,127 +1,13 @@
 <div class="my-skills">
-    <h1>My Skills</h1>
+    <h1 data-aos="fade-right" data-aos-easing="ease-out-cubis">My Skills</h1>
 
     <div class="table">
-
-        <div class="table-1">
+        <div data-aos="fade-up" data-aos-once="true" data-aos-offset="100" *ngFor="let skill of skills; let i = index" class="table-1">
             <div>
                 <div class="x">
-                    <img src="assets/img/Portfolio-img/java script.png">
+                    <img src="{{ skill.img }}">
                 </div>
-                <p>Java Script</p>
-            </div>
-            <div>
-                <div class="x">
-                    <img src="assets/img/angular.png">
-                </div>
-                <p>Angular</p>
-            </div>
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/Group 205.png">
-                </div>
-                <p>HTML/CSS</p>
-            </div>
-        </div>
-        <div class="table-1">
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/Group 226.png">
-                </div>
-                <p>SCRUM</p>
-            </div>
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/Git-Icon.png">
-                </div>
-                <p>Git</p>
-            </div>
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/Group 20.png">
-                </div>
-                <p>Design Thinking</p>
-            </div>
-        </div>
-
-        <div class="table-1">
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/api.png">
-                </div>
-                <p>Rest API</p>
-            </div>
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/thinking.png">
-                </div>
-                <p>Test automation</p>
-            </div>
-            <div>
-                <div class="x">
-                    <img src="assets/img/Portfolio-img/database.png">
-                </div>
-                <p>Databases</p>
+                <p>{{ skill["title"] }}</p>
             </div>
         </div>
     </div>
-
-    <!--
- <div class="table">
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/java script.png">
-            </div>
-            <p>Java Script</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/angular.png">
-            </div>
-            <p>Angular</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/Group 205.png">
-            </div>
-            <p>HTML/CSS</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/Group 226.png">
-            </div>
-            <p>SCRUM</p>
-        </div>
-        <div>
-            <div class="x">
-                <img src="assets/img/Portfolio-img/Git-Icon.png">
-            </div>
-            <p>Git</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/Group 20.png">
-            </div>
-            <p>Design Thinking</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/api.png">
-            </div>
-            <p>Rest API</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/thinking.png">
-            </div>
-            <p>Test automation</p>
-        </div>
-        <div>
-            <div>
-                <img src="assets/img/Portfolio-img/database.png">
-            </div>
-            <p>Databases</p>
-        </div>
-    </div>
-</div>
- -->
