--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,10 +1,7 @@
 .my-skills {
-    background-color: rgb(19, 17, 17);
+    background-color: #1A1A1A;
     width: 100vw;
-    // height: 1300px;
     max-width: 100%;
-    //  position: absolute;
-    //   top: 1200px;
     h1 {
         color: white;
         font-size: 64px;
@@ -15,7 +12,11 @@
     }
     .table {
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding-left: 200px;
+        padding-right: 200px;
         img {
             height: 40px;
             position: relative;
@@ -26,13 +27,14 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            margin-bottom: 30px;
         }
         p {
-            width: 300px;
-            height: 200px;
+            width: 250px;
+            height: 170px;
             border-radius: 10px;
             background-color: white;
-            font-size: 32px;
+            font-size: 24px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -46,7 +48,7 @@
             box-shadow: 0 5px 15px 5px #d1d1d1cc;
             position: relative;
             top: 70px;
-            left: 100px;
+            left: 80px;
             justify-content: center;
             align-items: center;
         }
