--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -1,7 +1,4 @@
 .my-work {
-    // height: 2000px;
-    // position: absolute;
-    // top: 2570px;
     max-width: 100%;
     width: 100vw;
     h1 {
@@ -15,53 +12,132 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        padding-top: 30px;
-        .btn-left-right {
+        padding-top: 12px;
+        button {
             background-color: black;
             color: white;
             font-size: 16px;
-            border: solid 2px rgb(250, 39, 89);
-            padding-top: 18px;
-            padding-bottom: 18px;
-            padding-left: 25px;
-            padding-right: 25px;
-            cursor: pointer;
+            border: solid 2px #FA2759;
+            min-width: 150px;
+            padding: 10px;
+            margin: 10px;
             &:hover {
-                background-color: rgb(250, 39, 89);
+                background-color: #FA2759;
             }
         }
-        .btn-mit {
-            background-color: black;
-            border: solid 2px rgb(250, 39, 89);
-            color: white;
-            font-size: 16px;
-            padding-left: 40px;
-            padding-right: 40px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            margin-left: 30px;
-            margin-right: 30px;
-            cursor: pointer;
-            &:hover {
-                background-color: rgb(250, 39, 89);
-            }
-        }
-        .left {
-            padding-left: 60px;
-            padding-right: 60px;
-        }
-    }
-    img {
-        height: 350px;
-        width: 500px;
-        cursor: pointer;
-        padding-left: 70px;
-        padding-top: 70px;
     }
     .projects {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        padding-top: 30px;
+        justify-content: space-around;
+        // gap: var(--space-m);
+        //  max-width: 1200px;
+        margin-top: 30px;
+        padding-left: 180px;
+        padding-right: 180px;
+        // margin-top: var(--space-m);
+        //padding-top: 30px;
+        // padding-left: 180px;
+        //padding-right: 180px;
+        .projects-container {
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        img {
+            // height: 280px;
+            //  width: 400px;
+            object-fit: contain;
+            max-width: 100%;
+            width: 500px;
+            display: flex;
+            cursor: pointer;
+            padding: 20px;
+            // padding-bottom: 60px; //
+            // padding-left: 60px; //
+        }
+        .projects-hover {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            overflow: hidden;
+            padding: var(--space-m);
+            // padding-left: 120px; //
+        }
+        .projekt-info {
+            // border-radius: 2px;
+            //  height: 330px;
+            width: 500px;
+            max-width: 100%;
+            //  max-height: 310px;
+            cursor: pointer;
+            padding-top: 20px;
+            margin-top: 20px;
+            // padding-bottom: 30px;
+            //  margin-left: 30px;
+            background-color: rgb(254, 254, 254, 0.9);
+            opacity: 0;
+            &:hover {
+                opacity: 1;
+            }
+            .title {
+                padding-top: 20px;
+                font-weight: 600;
+                font-size: 25px;
+                color: #FA2759;
+                display: flex;
+                justify-content: center;
+                // opacity: 0;
+            }
+            .hover-decription {
+                padding-left: 20px;
+                padding-right: 20px;
+                font-size: 20px;
+                display: flex;
+                justify-content: center;
+                padding-top: 30px;
+                // min-height: 100px;
+            }
+            p {
+                padding-left: 20px;
+                padding-right: 20px;
+                font-size: 20px;
+                display: flex;
+                justify-content: center;
+            }
+            button {
+                height: 50px;
+                width: 150px;
+                color: #FA2759;
+                border: solid 2px #FA2759;
+                font-size: 18px;
+                &:hover {
+                    background-color: #FA2759;
+                    color: white;
+                }
+            }
+            .project-btn {
+                display: flex;
+                justify-content: center;
+            }
+            /* .send-btn {
+                height: 50px;
+                width: 120px;
+                background-color: black;
+                border: solid 2px rgb(250, 39, 89);
+                color: rgb(250, 39, 89);
+                font-size: 20px;
+                margin-left: 545px;
+                cursor: pointer;
+                margin-top: 35px;
+            } */
+        }
     }
 }
