--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -61,7 +61,7 @@
         //   color: rgb(45, 252, 216);
         //   cursor: pointer;
     }
-    .button:disabled {
+    button:disabled {
         background-color: #2DFCD8;
         color: black;
     }
