--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,19 +4,26 @@
 
     <form (submit)="sendMail()" ngNativeValidate #myForm class="form">
 
-        <input required type="text" name="name" #nameField placeholder="Enter your name *">
+        <input [(ngModel)]="names" (change)="lengthtest()" matInput required type="text" name="name" #nameField placeholder="Enter your name *">
 
-        <input required type="text" email="email" #emailField placeholder="Enter your Email address *">
+        <input (change)="lengthtest()" matInput required type="text" email="email" #emailField placeholder="Enter your Email address *">
 
-        <input required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
+        <input (change)="lengthtest()" matInput required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
 
-        <button #sendButton mat-stroked-button color="primary">Send</button>
+        <button [disabled]="names.length !== 0" #sendButton mat-stroked-button color="primary">Send</button>
     </form>
+
+
+
 
 
 </div>
 
 <!--
+[(ngModel)]="names"
+ [disabled]="names.length !== 0" 
+
+
 
  <input [(ngModel)]="inputName" required type="text" name="name" #nameField placeholder="Enter your name *">
 
@@ -31,6 +38,7 @@
 
  [style.background-color]="send ? 'black' : '#2DFCD8'" [style.color]="send ? '#2dfcd964' : 'black'" 
 
+ //kad su ispunjena sva tri slova promeni broju u zeleno. Kad stisnes na send, onda farba weg (disabled)
 
 
         <button #sendButton class="send-btn">Send</button>
