--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,13 +4,13 @@
 
     <form (submit)="sendMail()" ngNativeValidate #myForm class="form">
 
-        <input [(ngModel)]="names" (change)="lengthtest()" matInput required type="text" name="name" #nameField placeholder="Enter your name *">
+        <input [(ngModel)]="names1" [ngModelOptions]="{standalone: true}" matInput required type="text" name="name" #nameField placeholder="Enter your name *">
 
-        <input (change)="lengthtest()" matInput required type="text" email="email" #emailField placeholder="Enter your Email address *">
+        <input [(ngModel)]="names2" [ngModelOptions]="{standalone: true}" matInput required type="text" email="email" #emailField placeholder="Enter your Email address *">
 
-        <input (change)="lengthtest()" matInput required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
+        <input [(ngModel)]="names3" [ngModelOptions]="{standalone: true}" matInput required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
 
-        <button [disabled]="names.length !== 0" #sendButton mat-stroked-button color="primary">Send</button>
+        <button [disabled]="names1.length !== 0 && names2.length !== 0 && names3.length !== 0" #sendButton mat-stroked-button color="primary">Send</button>
     </form>
 
 
