--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -4,7 +4,7 @@
     <div class="table">
         <div data-aos="fade-up" data-aos-once="true" data-aos-offset="100" *ngFor="let skill of skills; let i = index" class="table-1">
             <div>
-                <div class="x">
+                <div class="icons">
                     <img src="{{ skill.img }}">
                 </div>
                 <p>{{ skill["title"] }}</p>
