--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,7 +10,8 @@
 
         <input [(ngModel)]="names3" [ngModelOptions]="{standalone: true}" matInput required type="text" message="message" #messageField class="message" placeholder="Enter your message *">
 
-        <button [disabled]="names1.length !== 0 && names2.length !== 0 && names3.length !== 0" #sendButton mat-stroked-button color="primary">Send</button>
+        <button [disabled]="names1.length == 0 || names2.length == 0 || names3.length == 0" #sendButton mat-stroked-button color="primary">Send</button>
+
     </form>
 
 
