--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -28,6 +28,7 @@
             justify-content: space-evenly;
             align-items: center;
             margin-bottom: 30px;
+            padding: 30px;
         }
         p {
             width: 250px;
@@ -39,7 +40,7 @@
             justify-content: center;
             align-items: center;
         }
-        .x {
+        .icons {
             background-color: white;
             width: 80px;
             height: 80px;
