--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -16,7 +16,7 @@
             </div>
 
             <p>{{ about["title"] }}</p>
-            <p>{{ about["post"] }}</p>
+            <p style="min-height: 70px;">{{ about["post"] }}</p>
 
         </div>
     </div>
