--- a/src/app/data-protection/data-protection.component.scss
+++ b/src/app/data-protection/data-protection.component.scss
@@ -3,6 +3,7 @@
     padding-right: 180px;
     padding-bottom: 50px;
     color: white;
+    background-color: #1A1A1A;
 }
 
 .text-data-guidelines h1 {
