--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -2,7 +2,7 @@
     color: white;
     width: 100vw;
     max-width: 100%;
-    max-height: 700px;
+    min-height: 70%;
     background-color: #1A1A1A;
     padding-top: 120px;
     h1 {
