--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -46,7 +46,8 @@
         p {
             padding-right: 30px;
             min-width: 150px;
-            max-width: 150px;
+            max-width: 185px;
+            min-height: 40px;
         }
         .img-circle {
             background-color: #2DFCD8;
