--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -2,7 +2,7 @@
     <h1>Impressum</h1>
 
     <div class="date padding-allProjects">
-        Tijana Couturier <br> Hauptrastr. 26 <br> 77652 Offenburg <br>
+        Tijana Couturier <br> Distlhofweg 13<br> 81369 München <br>
         <br>
         <h3>Kontakt</h3>
         Telefon: +49 163 9247528 <br>
