--- a/src/app/menu-links/menu-links.component.scss
+++ b/src/app/menu-links/menu-links.component.scss
@@ -31,7 +31,6 @@ header {
         font-size: 20px;
         padding: 10px;
         &:hover {
-            //  color: rgba(250, 250, 250, 0.8);
             color: #FA2759;
         }
     }
@@ -59,14 +58,10 @@ header {
 }
 
 .overlay-menu {
-    // background-color: linear-gradient(180deg, black, 20%, var(--grey), 80%, #4b4b4b);
-    background-color: #272525;
-    //background: linear-gradient(180deg, black, 20%, var(--grey), 80%, #4b4b4b);
-    //  position: absolute;
+    background: linear-gradient(180deg, black, 20%, #1e1e1e, 80%, #4b4b4b);
     position: fixed;
     right: 0;
     top: 0;
-    // z-index: 2;
     z-index: 30;
     display: flex;
     flex-direction: column;
@@ -79,17 +74,14 @@ header {
 
 .show-overlay-menu {
     transform: translate(0);
-    img {
-        height: 40px;
-        filter: invert(1);
-    }
 }
 
 .close {
     position: absolute;
-    right: 16px;
-    top: 16px;
+    right: 20px;
+    top: 50px;
     height: 40px;
+    filter: invert(1);
 }
 
 .links-mobil {
@@ -98,5 +90,14 @@ header {
     padding-top: 150px;
     a {
         padding: 25px;
+        font-size: 18px;
     }
+}
+
+.material-icons {
+    font-size: 50px;
+}
+
+.mat-icon {
+    width: 50px;
 }
