--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -30,6 +30,10 @@
             padding-right: 50px;
             padding-left: 50px;
         }
+        @media (max-width: 435px) {
+            padding-left: 0;
+            padding-right: 0;
+        }
         img {
             height: 40px;
             position: relative;
@@ -39,6 +43,11 @@
                 height: 30px;
                 top: 15px;
                 left: 15px;
+            }
+            @media (max-width: 750px) {
+                height: 25px;
+                top: 10px;
+                left: 10px;
             }
         }
         .table-1 {
@@ -64,6 +73,11 @@
                 width: 200px;
                 height: 150px;
             }
+            @media (max-width: 750px) {
+                width: 140px;
+                height: 100px;
+                font-size: 18px;
+            }
         }
         .icons {
             background-color: white;
@@ -71,18 +85,29 @@
             height: 80px;
             border-radius: 100%;
             border: solid 2px whitesmoke;
-            // box-shadow: 0 5px 15px 5px #d1d1d1cc;
             box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
             position: relative;
             top: 70px;
             left: 85px;
             justify-content: center;
             align-items: center;
+            @media (max-width: 1250px) {
+                width: 70px;
+                height: 70px;
+                top: 60px;
+                left: 90px;
+            }
             @media (max-width: 930px) {
                 width: 60px;
                 height: 60px;
                 top: 60px;
                 left: 65px;
+            }
+            @media (max-width: 750px) {
+                width: 45px;
+                height: 45px;
+                top: 45px;
+                left: 45px;
             }
         }
     }
