--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './models/fonts.css';
+@import './models/material-icon.css';
 body,
 html {
     font-family: 'Lato', sans-serif;
@@ -44,6 +45,10 @@ html {
     }
 }
 
+.mobile-menu {
+    display: flex;
+}
+
 .btnActiv {
     background-color: #FA2759 !important;
 }
@@ -59,36 +64,3 @@ html {
         display: none !important;
     }
 }
-
-
-/*
-  .scrollbar {
-        margin-left: 30px;
-        float: right;
-        height: 100%;
-        width: 13px;
-        background: #fff;
-        overflow-y: scroll;
-        margin-bottom: 25px;
-    }
-    .force-overflow {
-        min-height: 100%;
-    }
-    .scrollbar-default::-webkit-scrollbar-track {
-        //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-        background-color: #F5F5F5;
-        border-radius: 10px;
-    }
-    .scrollbar-default::-webkit-scrollbar {
-        width: 12px;
-        background-color: #F5F5F5;
-    }
-    .scrollbar-default::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-        background-color: #2BBBAD;
-    }
-    .scrollbar-default {
-        scrollbar-color: #2BBBAD #F5F5F5;
-    }
-    */
